fix alignment of section anchor icon

--- a/stylesheets/article.css
+++ b/stylesheets/article.css
@@ -31,7 +31,7 @@
   visibility: hidden;
   margin-left: -0.75em;
   font-size: 0.8em;
-  padding-top: 0.1em;
+  padding-top: 0.05em;
 }
 
 .doc h1:hover > a.anchor::before,
